frontend.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atelier

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: atelier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: localhost:5000/frontend:latest
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: atelier
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: atelier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
